--- a/2_GLOT500_experiments.ipynb
+++ b/2_GLOT500_experiments.ipynb
@@ -11,15 +11,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from huggingface_hub import login\n",
     "\n",
+    "# This is my access token to be used when training (replace with your own if you want)\n",
+    "# Remember: Identity Theft is not a Joke\n",
     "\n",
-    "access_token_read = \"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\"\n",
-    "login(token = access_token_read)"
+    "# access_token_read = \"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\"\n",
+    "# login(token = access_token_read)"
    ]
   },
   {
