--- a/2_GLOT500_experiments.ipynb
+++ b/2_GLOT500_experiments.ipynb
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -452,7 +452,15 @@
     }
    ],
    "source": [
-    "result = pipeline.evaluate(data_code='wo_wtb')\n",
+    "result = pipeline.evaluate(data_code='wo_wtb')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "print(f\"Overall F1: {result['overall_f1']}\")\n",
     "print(f\"Overall Accuracy: {result['overall_accuracy']}\")"
    ]
