--- a/2_GLOT500_experiments.ipynb
+++ b/2_GLOT500_experiments.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,8 +20,8 @@
     "# This is my access token to be used when training (replace with your own if you want)\n",
     "# Remember: Identity Theft is not a Joke\n",
     "\n",
-    "# access_token_read = \"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\"\n",
-    "# login(token = access_token_read)"
+    "access_token_read = \"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\"\n",
+    "login(token = access_token_read)"
    ]
   },
   {
@@ -38,6 +38,16 @@
    "source": [
     "Here we fine-tune on the complete english POS Dataset. \n",
     "The code is commented so that it doesn't run accidentaly and change the model parameters in the hub"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### English\n",
+    "Using the EWT English Treebank with a size of 254k sentences\n",
+    "\n",
+    "repo link: [ibrahimbukhari1998/glot500_fintuned_en_ewt](https://huggingface.co/ibrahimbukhari1998/glot500_fintuned_en_ewt)"
    ]
   },
   {
@@ -282,6 +292,328 @@
    ],
    "source": [
     "# pipeline.train(push_to_hub=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Modern Standard Arabic\n",
+    "Using the NYUAD Arabic treebank with a size of 738k sentences\n",
+    "\n",
+    "repo link: [ibrahimbukhari1998/glot500_model_ar_nyuad](https://huggingface.co/ibrahimbukhari1998/glot500_model_ar_nyuad)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "89bb0a54bf6540bd8736129f2f303959",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading data:   0%|          | 0.00/46.9M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a9dda48bb251451eb720ddb26cd684c6",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading data:   0%|          | 0.00/5.85M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b8ec1f25d6d14a3bb115b88ba3587f34",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading data:   0%|          | 0.00/5.86M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a73b970ff071406db178310c2fbb405b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Generating train split:   0%|          | 0/15789 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1388847065584f8db6e7207717c2f0a8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Generating validation split:   0%|          | 0/1986 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "56ab5a4329f646df930642a90447922b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Generating test split:   0%|          | 0/1963 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of XLMRobertaForTokenClassification were not initialized from the model checkpoint at cis-lmu/glot500-base and are newly initialized: ['classifier.bias', 'classifier.weight']\n",
+      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8df72816825d4c1a9f83c14bbd53bc69",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map:   0%|          | 0/15789 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3a2d85dbc1b24827997aacaea6c9eac3",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map:   0%|          | 0/1986 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d63967d51f6e4d17b9a497d6eed782b5",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map:   0%|          | 0/1963 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "pipeline = glot500.POSpipeline(train_data_code='ar_nyuad')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/ibrahimbukhari/Documents/Courses/Software Projects/Code/.venvTransfer/lib/python3.12/site-packages/transformers/training_args.py:1583: FutureWarning: using `no_cuda` is deprecated and will be removed in version 5.0 of 🤗 Transformers. Use `use_cpu` instead\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "207c8dba0af242f19fbad4cff1ae0b76",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/1974 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'loss': 2.2906, 'grad_norm': 1.3461729288101196, 'learning_rate': 1.4934143870314084e-05, 'epoch': 0.51}\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2e58941db5754772981c9d3c9d14e4b1",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/123 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/ibrahimbukhari/Documents/Courses/Software Projects/Code/.venvTransfer/lib/python3.12/site-packages/seqeval/metrics/sequence_labeling.py:171: UserWarning: PROPN seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "/Users/ibrahimbukhari/Documents/Courses/Software Projects/Code/.venvTransfer/lib/python3.12/site-packages/seqeval/metrics/sequence_labeling.py:171: UserWarning: PUNCT seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "/Users/ibrahimbukhari/Documents/Courses/Software Projects/Code/.venvTransfer/lib/python3.12/site-packages/seqeval/metrics/sequence_labeling.py:171: UserWarning: NUM seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "/Users/ibrahimbukhari/Documents/Courses/Software Projects/Code/.venvTransfer/lib/python3.12/site-packages/seqeval/metrics/sequence_labeling.py:171: UserWarning: VERB seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "/Users/ibrahimbukhari/Documents/Courses/Software Projects/Code/.venvTransfer/lib/python3.12/site-packages/seqeval/metrics/sequence_labeling.py:171: UserWarning: NOUN seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "/Users/ibrahimbukhari/Documents/Courses/Software Projects/Code/.venvTransfer/lib/python3.12/site-packages/seqeval/metrics/sequence_labeling.py:171: UserWarning: ADJ seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "/Users/ibrahimbukhari/Documents/Courses/Software Projects/Code/.venvTransfer/lib/python3.12/site-packages/seqeval/metrics/sequence_labeling.py:171: UserWarning: _ seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "/Users/ibrahimbukhari/Documents/Courses/Software Projects/Code/.venvTransfer/lib/python3.12/site-packages/seqeval/metrics/sequence_labeling.py:171: UserWarning: SCONJ seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "/Users/ibrahimbukhari/Documents/Courses/Software Projects/Code/.venvTransfer/lib/python3.12/site-packages/seqeval/metrics/sequence_labeling.py:171: UserWarning: PRON seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "/Users/ibrahimbukhari/Documents/Courses/Software Projects/Code/.venvTransfer/lib/python3.12/site-packages/seqeval/metrics/sequence_labeling.py:171: UserWarning: ADV seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "/Users/ibrahimbukhari/Documents/Courses/Software Projects/Code/.venvTransfer/lib/python3.12/site-packages/seqeval/metrics/sequence_labeling.py:171: UserWarning: ADP seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "/Users/ibrahimbukhari/Documents/Courses/Software Projects/Code/.venvTransfer/lib/python3.12/site-packages/seqeval/metrics/sequence_labeling.py:171: UserWarning: CCONJ seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "/Users/ibrahimbukhari/Documents/Courses/Software Projects/Code/.venvTransfer/lib/python3.12/site-packages/seqeval/metrics/sequence_labeling.py:171: UserWarning: X seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "/Users/ibrahimbukhari/Documents/Courses/Software Projects/Code/.venvTransfer/lib/python3.12/site-packages/seqeval/metrics/sequence_labeling.py:171: UserWarning: AUX seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "/Users/ibrahimbukhari/Documents/Courses/Software Projects/Code/.venvTransfer/lib/python3.12/site-packages/seqeval/metrics/sequence_labeling.py:171: UserWarning: DET seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "/Users/ibrahimbukhari/Documents/Courses/Software Projects/Code/.venvTransfer/lib/python3.12/site-packages/seqeval/metrics/sequence_labeling.py:171: UserWarning: PART seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "/Users/ibrahimbukhari/Documents/Courses/Software Projects/Code/.venvTransfer/lib/python3.12/site-packages/seqeval/metrics/sequence_labeling.py:171: UserWarning: INTJ seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "/Users/ibrahimbukhari/Documents/Courses/Software Projects/Code/.venvTransfer/lib/python3.12/site-packages/seqeval/metrics/v1.py:57: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'eval_loss': 2.1919281482696533, 'eval_precision': 0.3443667119139605, 'eval_recall': 0.04404909778151754, 'eval_f1': 0.0781072375899962, 'eval_accuracy': 0.3085736628830067, 'eval_runtime': 42.6596, 'eval_samples_per_second': 46.015, 'eval_steps_per_second': 2.883, 'epoch': 1.0}\n",
+      "{'loss': 2.1936, 'grad_norm': 1.4195843935012817, 'learning_rate': 9.868287740628168e-06, 'epoch': 1.01}\n",
+      "{'loss': 2.1853, 'grad_norm': 0.7116724252700806, 'learning_rate': 4.80243161094225e-06, 'epoch': 1.52}\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "dfba203b273849eea86ef70bbfae5988",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/123 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/ibrahimbukhari/Documents/Courses/Software Projects/Code/.venvTransfer/lib/python3.12/site-packages/seqeval/metrics/sequence_labeling.py:171: UserWarning: PROPN seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "/Users/ibrahimbukhari/Documents/Courses/Software Projects/Code/.venvTransfer/lib/python3.12/site-packages/seqeval/metrics/sequence_labeling.py:171: UserWarning: PUNCT seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "/Users/ibrahimbukhari/Documents/Courses/Software Projects/Code/.venvTransfer/lib/python3.12/site-packages/seqeval/metrics/sequence_labeling.py:171: UserWarning: NUM seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "/Users/ibrahimbukhari/Documents/Courses/Software Projects/Code/.venvTransfer/lib/python3.12/site-packages/seqeval/metrics/sequence_labeling.py:171: UserWarning: VERB seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "/Users/ibrahimbukhari/Documents/Courses/Software Projects/Code/.venvTransfer/lib/python3.12/site-packages/seqeval/metrics/sequence_labeling.py:171: UserWarning: NOUN seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "/Users/ibrahimbukhari/Documents/Courses/Software Projects/Code/.venvTransfer/lib/python3.12/site-packages/seqeval/metrics/sequence_labeling.py:171: UserWarning: ADJ seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "/Users/ibrahimbukhari/Documents/Courses/Software Projects/Code/.venvTransfer/lib/python3.12/site-packages/seqeval/metrics/sequence_labeling.py:171: UserWarning: _ seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "/Users/ibrahimbukhari/Documents/Courses/Software Projects/Code/.venvTransfer/lib/python3.12/site-packages/seqeval/metrics/sequence_labeling.py:171: UserWarning: SCONJ seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "/Users/ibrahimbukhari/Documents/Courses/Software Projects/Code/.venvTransfer/lib/python3.12/site-packages/seqeval/metrics/sequence_labeling.py:171: UserWarning: PRON seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "/Users/ibrahimbukhari/Documents/Courses/Software Projects/Code/.venvTransfer/lib/python3.12/site-packages/seqeval/metrics/sequence_labeling.py:171: UserWarning: ADV seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "/Users/ibrahimbukhari/Documents/Courses/Software Projects/Code/.venvTransfer/lib/python3.12/site-packages/seqeval/metrics/sequence_labeling.py:171: UserWarning: ADP seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "/Users/ibrahimbukhari/Documents/Courses/Software Projects/Code/.venvTransfer/lib/python3.12/site-packages/seqeval/metrics/sequence_labeling.py:171: UserWarning: CCONJ seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "/Users/ibrahimbukhari/Documents/Courses/Software Projects/Code/.venvTransfer/lib/python3.12/site-packages/seqeval/metrics/sequence_labeling.py:171: UserWarning: X seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "/Users/ibrahimbukhari/Documents/Courses/Software Projects/Code/.venvTransfer/lib/python3.12/site-packages/seqeval/metrics/sequence_labeling.py:171: UserWarning: AUX seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "/Users/ibrahimbukhari/Documents/Courses/Software Projects/Code/.venvTransfer/lib/python3.12/site-packages/seqeval/metrics/sequence_labeling.py:171: UserWarning: DET seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "/Users/ibrahimbukhari/Documents/Courses/Software Projects/Code/.venvTransfer/lib/python3.12/site-packages/seqeval/metrics/sequence_labeling.py:171: UserWarning: PART seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "/Users/ibrahimbukhari/Documents/Courses/Software Projects/Code/.venvTransfer/lib/python3.12/site-packages/seqeval/metrics/sequence_labeling.py:171: UserWarning: INTJ seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "/Users/ibrahimbukhari/Documents/Courses/Software Projects/Code/.venvTransfer/lib/python3.12/site-packages/seqeval/metrics/v1.py:57: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'eval_loss': 2.1737024784088135, 'eval_precision': 0.36620747234397827, 'eval_recall': 0.04686727838548971, 'eval_f1': 0.08309947544788225, 'eval_accuracy': 0.3091186994952487, 'eval_runtime': 50.9756, 'eval_samples_per_second': 38.509, 'eval_steps_per_second': 2.413, 'epoch': 2.0}\n",
+      "{'train_runtime': 4123.1306, 'train_samples_per_second': 7.659, 'train_steps_per_second': 0.479, 'train_loss': 2.2125875517469287, 'epoch': 2.0}\n"
+     ]
+    }
+   ],
+   "source": [
+    "pipeline.train(push_to_hub=True)"
    ]
   },
   {
