Updated Glot500 Notebook for French and Russian Source Languages

--- a/2_GLOT500_experiments.ipynb
+++ b/2_GLOT500_experiments.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,8 +20,8 @@
     "# This is my access token to be used when training (replace with your own if you want)\n",
     "# Remember: Identity Theft is not a Joke\n",
     "\n",
-    "access_token_read = \"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\"\n",
-    "login(token = access_token_read)"
+    "# access_token_read = \"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\"\n",
+    "# login(token = access_token_read)"
    ]
   },
   {
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -445,12 +445,12 @@
     }
    ],
    "source": [
-    "pipeline = glot500.POSpipeline(train_data_code='ar_nyuad')"
+    "# pipeline = glot500.POSpipeline(train_data_code='ar_nyuad')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -613,7 +613,63 @@
     }
    ],
    "source": [
-    "pipeline.train(push_to_hub=True)"
+    "# pipeline.train(push_to_hub=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### French\n",
+    "Using the GSD French Treebank with a size of 400k sentences \n",
+    "\n",
+    "repo link: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pipeline = glot500.POSpipeline(train_data_code='fr_gsd')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pipeline.train(push_to_hub=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Russian\n",
+    "Using the Taiga Russian Treebank with a size of 197k sentences \n",
+    "\n",
+    "repo link: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pipeline = glot500.POSpipeline(train_data_code='ru_taiga')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pipeline.train(push_to_hub=True)"
    ]
   },
   {
