Finetuned Glot500 on French

--- a/2_GLOT500_experiments.ipynb
+++ b/2_GLOT500_experiments.ipynb
@@ -623,14 +623,149 @@
     "### French\n",
     "Using the GSD French Treebank with a size of 400k sentences \n",
     "\n",
-    "repo link: "
+    "repo link: [ibrahimbukhari1998/glot500_model_fr_gsd](https://huggingface.co/ibrahimbukhari1998/glot500_model_fr_gsd)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "143ceb2f05e14cb188e4495b440192d8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading data:   0%|          | 0.00/22.6M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8c9a00ee0b6340b688e61b8b9353b925",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading data:   0%|          | 0.00/2.27M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b2c2ccd87f1d4e6bb0196b2ec4ada991",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading data:   0%|          | 0.00/639k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8d9d9336cbe947209ec3ae367e64bf99",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Generating train split:   0%|          | 0/14449 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0b0ad1ea558d4a14ae2337a255e96fcc",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Generating validation split:   0%|          | 0/1476 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "236a2703372d41bab16bcddebe6bf53c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Generating test split:   0%|          | 0/416 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of XLMRobertaForTokenClassification were not initialized from the model checkpoint at cis-lmu/glot500-base and are newly initialized: ['classifier.bias', 'classifier.weight']\n",
+      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c162dc231dbd4fa7b8fd8e95a3635cfb",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map:   0%|          | 0/14449 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "477045f108734f778fbbde547aade7f1",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map:   0%|          | 0/1476 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8e25963c5b98469b9528fe5d4dbc8c4f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map:   0%|          | 0/416 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# pipeline = glot500.POSpipeline(train_data_code='fr_gsd')"
    ]
@@ -639,7 +774,170 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/ibrahimbukhari/Documents/Courses/Software Projects/Code/.venvTransfer/lib/python3.12/site-packages/transformers/training_args.py:1583: FutureWarning: using `no_cuda` is deprecated and will be removed in version 5.0 of 🤗 Transformers. Use `use_cpu` instead\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "64d6bf386abe4c4cbf1e99150a5ccfa5",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/1808 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'loss': 0.7975, 'grad_norm': 3.5243306159973145, 'learning_rate': 1.4469026548672567e-05, 'epoch': 0.55}\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "dcda6fcd3964420ebf0de9a359a87ba4",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/26 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/ibrahimbukhari/Documents/Courses/Software Projects/Code/.venvTransfer/lib/python3.12/site-packages/seqeval/metrics/sequence_labeling.py:171: UserWarning: PRON seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "/Users/ibrahimbukhari/Documents/Courses/Software Projects/Code/.venvTransfer/lib/python3.12/site-packages/seqeval/metrics/sequence_labeling.py:171: UserWarning: VERB seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "/Users/ibrahimbukhari/Documents/Courses/Software Projects/Code/.venvTransfer/lib/python3.12/site-packages/seqeval/metrics/sequence_labeling.py:171: UserWarning: SCONJ seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "/Users/ibrahimbukhari/Documents/Courses/Software Projects/Code/.venvTransfer/lib/python3.12/site-packages/seqeval/metrics/sequence_labeling.py:171: UserWarning: ADP seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "/Users/ibrahimbukhari/Documents/Courses/Software Projects/Code/.venvTransfer/lib/python3.12/site-packages/seqeval/metrics/sequence_labeling.py:171: UserWarning: CCONJ seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "/Users/ibrahimbukhari/Documents/Courses/Software Projects/Code/.venvTransfer/lib/python3.12/site-packages/seqeval/metrics/sequence_labeling.py:171: UserWarning: DET seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "/Users/ibrahimbukhari/Documents/Courses/Software Projects/Code/.venvTransfer/lib/python3.12/site-packages/seqeval/metrics/sequence_labeling.py:171: UserWarning: NOUN seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "/Users/ibrahimbukhari/Documents/Courses/Software Projects/Code/.venvTransfer/lib/python3.12/site-packages/seqeval/metrics/sequence_labeling.py:171: UserWarning: ADJ seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "/Users/ibrahimbukhari/Documents/Courses/Software Projects/Code/.venvTransfer/lib/python3.12/site-packages/seqeval/metrics/sequence_labeling.py:171: UserWarning: AUX seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "/Users/ibrahimbukhari/Documents/Courses/Software Projects/Code/.venvTransfer/lib/python3.12/site-packages/seqeval/metrics/sequence_labeling.py:171: UserWarning: ADV seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "/Users/ibrahimbukhari/Documents/Courses/Software Projects/Code/.venvTransfer/lib/python3.12/site-packages/seqeval/metrics/sequence_labeling.py:171: UserWarning: PUNCT seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "/Users/ibrahimbukhari/Documents/Courses/Software Projects/Code/.venvTransfer/lib/python3.12/site-packages/seqeval/metrics/sequence_labeling.py:171: UserWarning: PROPN seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "/Users/ibrahimbukhari/Documents/Courses/Software Projects/Code/.venvTransfer/lib/python3.12/site-packages/seqeval/metrics/sequence_labeling.py:171: UserWarning: _ seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "/Users/ibrahimbukhari/Documents/Courses/Software Projects/Code/.venvTransfer/lib/python3.12/site-packages/seqeval/metrics/sequence_labeling.py:171: UserWarning: NUM seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "/Users/ibrahimbukhari/Documents/Courses/Software Projects/Code/.venvTransfer/lib/python3.12/site-packages/seqeval/metrics/sequence_labeling.py:171: UserWarning: SYM seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "/Users/ibrahimbukhari/Documents/Courses/Software Projects/Code/.venvTransfer/lib/python3.12/site-packages/seqeval/metrics/sequence_labeling.py:171: UserWarning: PART seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "/Users/ibrahimbukhari/Documents/Courses/Software Projects/Code/.venvTransfer/lib/python3.12/site-packages/seqeval/metrics/sequence_labeling.py:171: UserWarning: X seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "/Users/ibrahimbukhari/Documents/Courses/Software Projects/Code/.venvTransfer/lib/python3.12/site-packages/seqeval/metrics/sequence_labeling.py:171: UserWarning: INTJ seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "/Users/ibrahimbukhari/Documents/Courses/Software Projects/Code/.venvTransfer/lib/python3.12/site-packages/seqeval/metrics/v1.py:57: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'eval_loss': 0.10908293724060059, 'eval_precision': 0.9679062659195109, 'eval_recall': 0.9673149373790856, 'eval_f1': 0.9676105113057649, 'eval_accuracy': 0.9710623422023694, 'eval_runtime': 8.0875, 'eval_samples_per_second': 51.437, 'eval_steps_per_second': 3.215, 'epoch': 1.0}\n",
+      "{'loss': 0.1134, 'grad_norm': 4.054416656494141, 'learning_rate': 8.938053097345133e-06, 'epoch': 1.11}\n",
+      "{'loss': 0.0735, 'grad_norm': 2.9916696548461914, 'learning_rate': 3.407079646017699e-06, 'epoch': 1.66}\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ef693f893ffa46dd9a2074682402e425",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/26 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/ibrahimbukhari/Documents/Courses/Software Projects/Code/.venvTransfer/lib/python3.12/site-packages/seqeval/metrics/sequence_labeling.py:171: UserWarning: PRON seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "/Users/ibrahimbukhari/Documents/Courses/Software Projects/Code/.venvTransfer/lib/python3.12/site-packages/seqeval/metrics/sequence_labeling.py:171: UserWarning: VERB seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "/Users/ibrahimbukhari/Documents/Courses/Software Projects/Code/.venvTransfer/lib/python3.12/site-packages/seqeval/metrics/sequence_labeling.py:171: UserWarning: SCONJ seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "/Users/ibrahimbukhari/Documents/Courses/Software Projects/Code/.venvTransfer/lib/python3.12/site-packages/seqeval/metrics/sequence_labeling.py:171: UserWarning: ADP seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "/Users/ibrahimbukhari/Documents/Courses/Software Projects/Code/.venvTransfer/lib/python3.12/site-packages/seqeval/metrics/sequence_labeling.py:171: UserWarning: CCONJ seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "/Users/ibrahimbukhari/Documents/Courses/Software Projects/Code/.venvTransfer/lib/python3.12/site-packages/seqeval/metrics/sequence_labeling.py:171: UserWarning: DET seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "/Users/ibrahimbukhari/Documents/Courses/Software Projects/Code/.venvTransfer/lib/python3.12/site-packages/seqeval/metrics/sequence_labeling.py:171: UserWarning: NOUN seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "/Users/ibrahimbukhari/Documents/Courses/Software Projects/Code/.venvTransfer/lib/python3.12/site-packages/seqeval/metrics/sequence_labeling.py:171: UserWarning: ADJ seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "/Users/ibrahimbukhari/Documents/Courses/Software Projects/Code/.venvTransfer/lib/python3.12/site-packages/seqeval/metrics/sequence_labeling.py:171: UserWarning: AUX seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "/Users/ibrahimbukhari/Documents/Courses/Software Projects/Code/.venvTransfer/lib/python3.12/site-packages/seqeval/metrics/sequence_labeling.py:171: UserWarning: ADV seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "/Users/ibrahimbukhari/Documents/Courses/Software Projects/Code/.venvTransfer/lib/python3.12/site-packages/seqeval/metrics/sequence_labeling.py:171: UserWarning: PUNCT seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "/Users/ibrahimbukhari/Documents/Courses/Software Projects/Code/.venvTransfer/lib/python3.12/site-packages/seqeval/metrics/sequence_labeling.py:171: UserWarning: PROPN seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "/Users/ibrahimbukhari/Documents/Courses/Software Projects/Code/.venvTransfer/lib/python3.12/site-packages/seqeval/metrics/sequence_labeling.py:171: UserWarning: _ seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "/Users/ibrahimbukhari/Documents/Courses/Software Projects/Code/.venvTransfer/lib/python3.12/site-packages/seqeval/metrics/sequence_labeling.py:171: UserWarning: NUM seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "/Users/ibrahimbukhari/Documents/Courses/Software Projects/Code/.venvTransfer/lib/python3.12/site-packages/seqeval/metrics/sequence_labeling.py:171: UserWarning: SYM seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "/Users/ibrahimbukhari/Documents/Courses/Software Projects/Code/.venvTransfer/lib/python3.12/site-packages/seqeval/metrics/sequence_labeling.py:171: UserWarning: PART seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "/Users/ibrahimbukhari/Documents/Courses/Software Projects/Code/.venvTransfer/lib/python3.12/site-packages/seqeval/metrics/sequence_labeling.py:171: UserWarning: X seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "/Users/ibrahimbukhari/Documents/Courses/Software Projects/Code/.venvTransfer/lib/python3.12/site-packages/seqeval/metrics/sequence_labeling.py:171: UserWarning: INTJ seems not to be NE tag.\n",
+      "  warnings.warn('{} seems not to be NE tag.'.format(chunk))\n",
+      "/Users/ibrahimbukhari/Documents/Courses/Software Projects/Code/.venvTransfer/lib/python3.12/site-packages/seqeval/metrics/v1.py:57: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'eval_loss': 0.08823458850383759, 'eval_precision': 0.9737511445721844, 'eval_recall': 0.974544343753182, 'eval_f1': 0.974147582697201, 'eval_accuracy': 0.9767916100213634, 'eval_runtime': 6.6222, 'eval_samples_per_second': 62.819, 'eval_steps_per_second': 3.926, 'epoch': 2.0}\n",
+      "{'train_runtime': 2467.5912, 'train_samples_per_second': 11.711, 'train_steps_per_second': 0.733, 'train_loss': 0.2840322108395332, 'epoch': 2.0}\n"
+     ]
+    }
+   ],
    "source": [
     "# pipeline.train(push_to_hub=True)"
    ]
