Bug Fixes: Noise Injection

--- a/3_Noise_Inj_experiments.ipynb
+++ b/3_Noise_Inj_experiments.ipynb
@@ -39,7 +39,7 @@
     "\n",
     "paramters = [\n",
     "                {\n",
-    "                    'tuning_codes': ['fr_gsd', 'ca_ancora'],\n",
+    "                    'tuning_codes': ['fr_gsd'],\n",
     "                    'test_code': 'ca_ancora',\n",
     "                    'model_name': model_name,\n",
     "                    'character_level_injection': True,\n",
@@ -48,7 +48,7 @@
     "                },\n",
     "                \n",
     "                {\n",
-    "                    'tuning_codes': ['en_ewt', 'wo_wtb'],\n",
+    "                    'tuning_codes': ['en_ewt'],\n",
     "                    'test_code': 'wo_wtb',\n",
     "                    'model_name': model_name,\n",
     "                    'character_level_injection': True,\n",
