Bug Fixes: Added Sampling Threshold and tuned_model_name

--- a/2_Multiple_HRLs_experiments.ipynb
+++ b/2_Multiple_HRLs_experiments.ipynb
@@ -29,18 +29,22 @@
     "                    'tuning_codes': ['tune_code1', 'tune_code2'],\n",
     "                    'test_code': 'test_code',\n",
     "                    'model_name': model_name,\n",
+    "                    'tuned_model_name': 'tuned_model_name',\n",
     "                    'character_level_injection': False,\n",
     "                    'injection_vocab': \"\",\n",
-    "                    'injection_prob': 0.0\n",
+    "                    'injection_prob': 0.0,\n",
+    "                    'sample_threshold': 0\n",
     "                },\n",
     "                \n",
     "                {\n",
     "                    'tuning_codes': ['tune_code1', 'tune_code2'],\n",
     "                    'test_code': 'test_code',\n",
     "                    'model_name': model_name,\n",
+    "                    'tuned_model_name': 'tuned_model_name',\n",
     "                    'character_level_injection': False,\n",
     "                    'injection_vocab': \"\",\n",
-    "                    'injection_prob': 0.0\n",
+    "                    'injection_prob': 0.0,\n",
+    "                    'sample_threshold': 0\n",
     "                }\n",
     "    ]"
    ]
