--- a/3_Noise_Inj_experiments.ipynb
+++ b/3_Noise_Inj_experiments.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,18 +42,22 @@
     "                    'tuning_codes': ['fr_gsd'],\n",
     "                    'test_code': 'ca_ancora',\n",
     "                    'model_name': model_name,\n",
+    "                    'tuned_model_name': 'glot500-Inj-fr_gsd',\n",
     "                    'character_level_injection': True,\n",
     "                    'injection_vocab': \"L·lŀlÇÏÜ!@#$%^&*()_+-=[]{}|;:,.<>?/~\",\n",
-    "                    'injection_prob': 0.15\n",
+    "                    'injection_prob': 0.15,\n",
+    "                    'sample_threshold': 0\n",
     "                },\n",
     "                \n",
     "                {\n",
     "                    'tuning_codes': ['en_ewt'],\n",
     "                    'test_code': 'wo_wtb',\n",
     "                    'model_name': model_name,\n",
+    "                    'tuned_model_name': 'glot500-Inj-en_ewt'\n",
     "                    'character_level_injection': True,\n",
     "                    'injection_vocab': \"ƊɗÑñŊŋ!@#$%^&*()_+-=[]{}|;:,.<>?/~\",\n",
-    "                    'injection_prob': 0.15\n",
+    "                    'injection_prob': 0.15,\n",
+    "                    'sample_threshold': 0\n",
     "                }\n",
     "    ]"
    ]
