--- a/3_Noise_Inj_experiments.ipynb
+++ b/3_Noise_Inj_experiments.ipynb
@@ -53,7 +53,7 @@
     "                    'tuning_codes': ['en_ewt'],\n",
     "                    'test_code': 'wo_wtb',\n",
     "                    'model_name': model_name,\n",
-    "                    'tuned_model_name': 'glot500-Inj-en_ewt'\n",
+    "                    'tuned_model_name': 'glot500-Inj-en_ewt',\n",
     "                    'character_level_injection': True,\n",
     "                    'injection_vocab': \"ƊɗÑñŊŋ!@#$%^&*()_+-=[]{}|;:,.<>?/~\",\n",
     "                    'injection_prob': 0.15,\n",
