result analysis for dropout

--- a/4_Dropout_experiment.ipynb
+++ b/4_Dropout_experiment.ipynb
@@ -146,6 +146,54 @@
     "print(\"Starting GLOT500 experiments with word dropout...\")\n",
     "glot500_results = automation.batch_tune_eval(glot500_parameters)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Results Analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def print_experiment_results(results, experiment_name):\n",
+    "    \"\"\"\n",
+    "    Print experiment results in a readable format\n",
+    "    \n",
+    "    Args:\n",
+    "        results: List of experiment results\n",
+    "        experiment_name: Name of the experiment set\n",
+    "    \"\"\"\n",
+    "    print(f\"\\n{experiment_name} Results:\")\n",
+    "    print(\"=\"*80)\n",
+    "    \n",
+    "    for result in results:\n",
+    "        print(f\"\\nModel: {result['model_name']}\")\n",
+    "        print(f\"Training Data: {result['tuning_codes']}\")\n",
+    "        print(f\"Test Data: {result['test_code']}\")\n",
+    "        print(f\"Dropout Type: {result.get('dropout_type', 'N/A')}\")\n",
+    "        print(f\"Dropout Probability: {result.get('dropout_prob', 'N/A')}\")\n",
+    "        print(\"\\nResults:\")\n",
+    "        print(result['result'])\n",
+    "        print(\"-\"*80)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Print results for both experiment sets\n",
+    "print(\"\\nFinal Results Summary\")\n",
+    "print(\"=\"*80)\n",
+    "print_experiment_results(xlmr_results, \"XLM-R BPE Dropout\")\n",
+    "print_experiment_results(glot500_results, \"GLOT500 Word Dropout\")"
+   ]
   }
  ],
  "metadata": {
