added dropout experiments for more lang pairs

--- a/4_Dropout_experiment.ipynb
+++ b/4_Dropout_experiment.ipynb
@@ -2134,6 +2134,58 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "# separated the experiments for limited GPU resources\n",
+        "xlmr_parameters2 = [\n",
+        "    # Arabic -> Urdu experiments\n",
+        "    {\n",
+        "        'tuning_codes': ['ar_nyuad'],        # Standard Arabic training data\n",
+        "        'test_code': 'ur_udtb',             # Urdu test data\n",
+        "        'model_name': 'xlm-roberta-base',\n",
+        "        'tuned_model_name': 'xlmr-bpe-dropout-0.1-ar-ur',\n",
+        "        'character_level_injection': False,\n",
+        "        'injection_vocab': '',\n",
+        "        'injection_prob': 0.0,\n",
+        "        'sample_threshold': 10000,\n",
+        "        'use_dropout': True,\n",
+        "        'dropout_prob': 0.1                # 10% dropout probability\n",
+        "    },\n",
+        "\n",
+        "    # Russian -> Ukrainian experiments\n",
+        "    {\n",
+        "        'tuning_codes': ['ru_taiga'],   # Russian training data\n",
+        "        'test_code': 'uk_iu',               # Ukrainian test data\n",
+        "        'model_name': 'xlm-roberta-base',\n",
+        "        'tuned_model_name': 'xlmr-bpe-dropout-0.1-ru-uk',\n",
+        "        'character_level_injection': False,\n",
+        "        'injection_vocab': '',\n",
+        "        'injection_prob': 0.0,\n",
+        "        'sample_threshold': 10000,\n",
+        "        'use_dropout': True,\n",
+        "        'dropout_prob': 0.1\n",
+        "    }\n",
+        "]"
+      ],
+      "metadata": {
+        "id": "XBXCsAabu22f"
+      },
+      "execution_count": 15,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"Starting XLM-R experiments (Part II) with BPE dropout...\")\n",
+        "xlmr_results2 = automation.batch_tune_eval(xlmr_parameters2)"
+      ],
+      "metadata": {
+        "id": "Bcy41ChVw6zr"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "C5vkLE5U2UCc"
@@ -3764,6 +3816,51 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "glot500_parameters2 = [\n",
+        "    # Arabic -> Urdu experiments\n",
+        "    {\n",
+        "        'tuning_codes': ['ar_nyuad'],\n",
+        "        'test_code': 'ur_udtb',\n",
+        "        'model_name': 'cis-lmu/glot500-base',\n",
+        "        'tuned_model_name': 'glot500-word-dropout-0.1-ar-ur',\n",
+        "        'use_dropout': True,\n",
+        "        'dropout_prob': 0.1,\n",
+        "        'sample_threshold': 10000\n",
+        "    },\n",
+        "\n",
+        "    # Russian -> Ukrainian experiments\n",
+        "    {\n",
+        "        'tuning_codes': ['ru_taiga'],\n",
+        "        'test_code': 'uk_iu',\n",
+        "        'model_name': 'cis-lmu/glot500-base',\n",
+        "        'tuned_model_name': 'glot500-word-dropout-0.1-ru-uk',\n",
+        "        'use_dropout': True,\n",
+        "        'dropout_prob': 0.1,\n",
+        "        'sample_threshold': 10000\n",
+        "    }\n",
+        "]"
+      ],
+      "metadata": {
+        "id": "p6pxIgNmxGgV"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"Starting GLOT500 experiments with word dropout...\")\n",
+        "glot500_results2 = automation.batch_tune_eval(glot500_parameters2)"
+      ],
+      "metadata": {
+        "id": "BdbYZlP_xXY0"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "3BnZSJEe2UCf"
@@ -3774,7 +3871,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
         "id": "C4lORj9w2UCg"
       },
@@ -3804,11 +3901,93 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
-        "id": "apcEIMZA2UCg"
+        "id": "apcEIMZA2UCg",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "7f0987b8-de2d-42cf-e13b-5a65c0f58c56"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "Final Results Summary\n",
+            "================================================================================\n",
+            "\n",
+            "GLOT500 Word Dropout Results:\n",
+            "================================================================================\n",
+            "\n",
+            "Model: cis-lmu/glot500-base\n",
+            "Training Data: ['en_ewt']\n",
+            "Test Data: wo_wtb\n",
+            "Dropout Type: Word dropout\n",
+            "Dropout Probability: 0.1\n",
+            "\n",
+            "Results:\n",
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       0.22      0.39      0.28      1718\n",
+            "           1       0.15      0.61      0.24       963\n",
+            "           2       0.03      0.00      0.00       758\n",
+            "           3       0.32      0.24      0.27       142\n",
+            "           5       0.00      0.00      0.00       211\n",
+            "           6       0.00      0.00      0.00         2\n",
+            "           7       0.00      0.00      0.00       143\n",
+            "           8       0.00      0.00      0.00       784\n",
+            "           9       0.00      0.00      0.00       264\n",
+            "          10       0.27      0.66      0.38       694\n",
+            "          11       0.25      0.02      0.04      1384\n",
+            "          13       0.00      0.00      0.00       304\n",
+            "          14       0.20      0.01      0.01       299\n",
+            "          15       0.00      0.00      0.00         3\n",
+            "          16       0.21      0.10      0.13      1719\n",
+            "          17       0.08      0.04      0.05       942\n",
+            "\n",
+            "    accuracy                           0.19     10330\n",
+            "   macro avg       0.11      0.13      0.09     10330\n",
+            "weighted avg       0.16      0.19      0.13     10330\n",
+            "\n",
+            "--------------------------------------------------------------------------------\n",
+            "\n",
+            "Model: cis-lmu/glot500-base\n",
+            "Training Data: ['fr_gsd']\n",
+            "Test Data: ca_ancora\n",
+            "Dropout Type: Word dropout\n",
+            "Dropout Probability: 0.1\n",
+            "\n",
+            "Results:\n",
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       0.18      0.25      0.21     10644\n",
+            "           1       0.15      0.39      0.22      5654\n",
+            "           2       0.21      0.16      0.18      9600\n",
+            "           3       0.12      0.15      0.13      1006\n",
+            "           4       0.00      0.00      0.00       583\n",
+            "           5       0.00      0.00      0.00       999\n",
+            "           6       0.16      0.05      0.07      3245\n",
+            "           7       0.00      0.00      0.00        21\n",
+            "           8       0.05      0.02      0.02      7964\n",
+            "           9       0.00      0.00      0.00      1604\n",
+            "          10       0.27      0.32      0.29      5554\n",
+            "          11       0.10      0.05      0.07      2479\n",
+            "          13       0.00      0.00      0.00       115\n",
+            "          14       0.18      0.19      0.18      1595\n",
+            "          15       0.00      0.00      0.00         3\n",
+            "          16       0.09      0.13      0.11      4336\n",
+            "          17       0.05      0.01      0.02      2333\n",
+            "\n",
+            "    accuracy                           0.17     57735\n",
+            "   macro avg       0.09      0.10      0.09     57735\n",
+            "weighted avg       0.14      0.17      0.15     57735\n",
+            "\n",
+            "--------------------------------------------------------------------------------\n"
+          ]
+        }
+      ],
       "source": [
         "# Print results for both experiment sets\n",
         "print(\"\\nFinal Results Summary\")\n",
